package main;

message SrcTree {
  optional string PackageName = 1;
  repeated SrcTree Imports = 2;
}
